--- a/index.html
+++ b/index.html
@@ -7,21 +7,29 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <h2>HIHELLO</h2>
-    <div>
-    <h4>1</h4>
-    <h4>2</h4>
-    <h4>3</h4></div>
+   <div class="top">
+        <div class="home">
+            <a href="#"><Span class="red">MI</Span><Span class="green">HEALTH</Span></a>
+        </div >
+        <div class="topNav">
+        <a class="nav" href="#">Breakfast</a>     
+        <a class="nav" href="#">Lunch</a>
+        <a class="nav" href="#">Dinner</a>
+        <a class="nav" href="#">Dessert</a>
+    </div></div>
+    <div class="main">
     <h1>
-Latin
+Be Healthy
     </h1>
+    <div class="text">
     <p>
         Lorem ipsum is a pseudo-Latin text used in web design, typography, layout, and printing in place of English to emphasise design elements over content. It's also called placeholder (or filler) text. It's a convenient tool for mock-ups. It helps to outline the visual elements of a document or presentation, eg typography, font, or layout. Lorem ipsum is mostly a part of a Latin text by the classical author and philosopher Cicero. Its words and letters have been changed by addition or removal, so to deliberately render its content nonsensical; it's not genuine, correct, or comprehensible Latin anymore. While lorem ipsum's still resembles classical Latin, it actually has no meaning whatsoever. As Cicero's text doesn't contain the letters K, W, or Z, alien to latin, these, and others are often inserted randomly to mimic the typographic appearence of European languages, as are digraphs not to be found in the original.
 
 In a professional context it often happens that private or corporate clients corder a publication to be made and presented with the actual content still not being ready. Think of a news blog that's filled with content hourly on the day of going live. However, reviewers tend to be distracted by comprehensible content, say, a random text copied from a newspaper or the internet. The are likely to focus on the text, disregarding the layout and its elements. Besides, random text risks to be unintendedly humorous or offensive, an unacceptable risk in corporate environments. Lorem ipsum and its many variants have been employed since the early 1960ies, and quite likely since the sixteenth century.   </p>
-<h3>Look</h3>
-<div><img src="no.jpg" > </div>
-<div><img src="ha.jpg" ></div>
-<div><img src="why.jpg" ></div>
+</div>
+<h3>Browse Menu</h3>
+<div class="img"><img class="pics" src="https://mtec.instructure.com/users/1655453/files/97536492/preview?verifier=6tEbdvAvl1QDIBpmCM7JsUVxgKimV50UJT2U9ivP" alt ="1">
+    <img class="pics" src="https://mtec.instructure.com/users/1655453/files/97536496/preview?verifier=VK9OiU1UaPH9JOuib0r3uToB6TFhYiHLHgPO8msU" alt="2">
+    <img class="pics" src="https://mtec.instructure.com/users/1655453/files/97536514/preview?verifier=QeYxnovrAJerviKMdtUTXdhxkXmxB3YEkbLtaS38" alt="3"> </div>
 </body>
 </html>
