--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a class="nav">Dessert</a>
     </div></div>
     <div class="main">
-    <h1>
+  <div class="all"> <h1>
 Be Healthy
     </h1>
     <div class="text">
@@ -31,7 +31,7 @@ Be Healthy
          As Cicero's text doesn't contain the letters K, W, or Z, alien to latin, these, and others are often inserted randomly to mimic the typographic appearence of European languages, as are digraphs not to be found in the original
     </p>
 </div>
-<h3>BROWSE MENU  --&gt;</h3>
+<h3>BROWSE MENU  --&gt;</h3></div> 
 <div class="img"><img class="pics" src="https://mtec.instructure.com/users/1655453/files/97536492/preview?verifier=6tEbdvAvl1QDIBpmCM7JsUVxgKimV50UJT2U9ivP" alt ="1">
     <img class="pics" src="https://mtec.instructure.com/users/1655453/files/97536496/preview?verifier=VK9OiU1UaPH9JOuib0r3uToB6TFhYiHLHgPO8msU" alt="2">
     <img class="pics" src="https://mtec.instructure.com/users/1655453/files/97536514/preview?verifier=QeYxnovrAJerviKMdtUTXdhxkXmxB3YEkbLtaS38" alt="3"> </div> </div>
