--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <h1>
 Be Healthy
     </h1>
-    
+
     <p>
         Lorem ipsum is a pseudo-Latin text used in web design, typography, layout, and printing in place of English to emphasise design elements over content. 
         It's also called placeholder (or filler) text. It's a convenient tool for mock-ups. It helps to outline the visual elements of a document or presentation, eg typography, font, or layout.
@@ -37,6 +37,10 @@ Be Healthy
     <img class="pics" src="https://mtec.instructure.com/users/1655453/files/97536492/preview?verifier=6tEbdvAvl1QDIBpmCM7JsUVxgKimV50UJT2U9ivP" alt ="1">
     <img class="pics" src="https://mtec.instructure.com/users/1655453/files/97536496/preview?verifier=VK9OiU1UaPH9JOuib0r3uToB6TFhYiHLHgPO8msU" alt="2">
     <img class="pics" src="https://mtec.instructure.com/users/1655453/files/97536514/preview?verifier=QeYxnovrAJerviKMdtUTXdhxkXmxB3YEkbLtaS38" alt="3"> 
+</div>
+<div class="Fresh">
+    <h4>Fresh</h4>
+    <h5>Breakfast</h5>
 </div> </div>
 </body>
 </html>
