--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@ Be Healthy
 <div class="Fresh">
     <h4>Fresh</h4>
     <h5>Breakfast</h5>
-    h4>Fresh</h4>
+    <h4>Fresh</h4>
     <h5>Breakfast</h5> 
-    h4>Fresh</h4>
+    <h4>Fresh</h4>
     <h5>Breakfast</h5>  </div>
 </div> </div>
 </body>
