--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
    <div class="top">
         <div class="home">
-           <Span class="red">MI</Span><Span class="green">HEALTH</Span>
+           <span class="red">MI</span><span class="green">HEALTH</span>
         </div >
         <div class="topNav">
         <a class="nav">Breakfast</a>     
