--- a/index.html
+++ b/index.html
@@ -26,24 +26,23 @@ Be Healthy
     <p>
         Lorem ipsum is a pseudo-Latin text used in web design, typography, layout, and printing in place of English to emphasise design elements over content. 
         It's also called placeholder (or filler) text. It's a convenient tool for mock-ups. It helps to outline the visual elements of a document or presentation, eg typography, font, or layout.
-         Lorem ipsum is mostly a part of a Latin text by the classical author and philosopher Cicero. 
-         Its words and letters have been changed by addition or removal, so to deliberately render its content nonsensical; it's not genuine, correct, or comprehensible Latin anymore. 
-         While lorem ipsum's still resembles classical Latin, it actually has no meaning whatsoever. 
-         As Cicero's text doesn't contain the letters K, W, or Z, alien to latin, these, and others are often inserted randomly to mimic the typographic appearence of European languages, as are digraphs not to be found in the original
-          </p>
+
+           </p>
 
 <h3>BROWSE MENU  --&gt;</h3></div> 
 
 <div class="img">
 
-    <div class="box1">
-    <img class="pics" src="https://mtec.instructure.com/users/1655453/files/97536492/preview?verifier=6tEbdvAvl1QDIBpmCM7JsUVxgKimV50UJT2U9ivP" alt ="1">
+
+<img class="pics" src="https://mtec.instructure.com/users/1655453/files/97536492/preview?verifier=6tEbdvAvl1QDIBpmCM7JsUVxgKimV50UJT2U9ivP" alt ="1">
     <h4>Fresh</h4>
-    <h5>Breakfast</h5></div>
+    <h5>Breakfast</h5>
     <img class="pics" src="https://mtec.instructure.com/users/1655453/files/97536496/preview?verifier=VK9OiU1UaPH9JOuib0r3uToB6TFhYiHLHgPO8msU" alt="2">
-    <img class="pics" src="https://mtec.instructure.com/users/1655453/files/97536514/preview?verifier=QeYxnovrAJerviKMdtUTXdhxkXmxB3YEkbLtaS38" alt="3"> 
+   
     <h4>Fresh</h4>
     <h5>Breakfast</h5> 
+     
+    <img class="pics" src="https://mtec.instructure.com/users/1655453/files/97536514/preview?verifier=QeYxnovrAJerviKMdtUTXdhxkXmxB3YEkbLtaS38">
     <h4>Fresh</h4>
     <h5>Breakfast</h5>  
 </div> </div> 
