--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
    <div class="top">
         <div class="home">
-           <span class="red">MI</span><span class="green">HEALTH</span>
+           <div class="red">MI</div><div class="green">HEALTH</div>
         </div >
         <div class="topNav">
         <a class="nav">Breakfast</a>     
