--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
    <div class="top">
         <div class="home">
-           <div class="red">MI</div><div class="green">HEALTH</div>
+           <span class="red">MI</span><span class="green">HEALTH</span>
         </div >
         <div class="topNav">
         <a class="nav">Breakfast</a>     
@@ -32,7 +32,7 @@ Be Healthy
 <h3>BROWSE MENU  --&gt;</h3></div> 
 
 <div class="img">
-
+    
 
 <img class="pics" src="https://mtec.instructure.com/users/1655453/files/97536492/preview?verifier=6tEbdvAvl1QDIBpmCM7JsUVxgKimV50UJT2U9ivP" alt ="1">
     <h4>Fresh</h4>
