--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
    <div class="top">
         <div class="home">
-         <div class="red">  <span class="red">MI</span></div><div class="green"><span class="green">HEALTH</span></div>
+          <span class="red">MI</span><span class="green">HEALTH</span>
         </div >
         <div class="topNav">
         <a class="nav">Breakfast</a>     
