--- a/index.html
+++ b/index.html
@@ -1,50 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
+
 <body>
-   <div class="top">
+    <div class="top">
         <div class="home">
-          <span class="red">MI</span><span class="green">HEALTH</span>
-        </div >
+            <span class="red">MI</span><span class="green">HEALTH</span>
+        </div>
         <div class="topNav">
-        <a class="nav">Breakfast</a>     
-        <a class="nav">Lunch</a>
-        <a class="nav">Dinner</a>
-        <a class="nav">Dessert</a>
-    </div></div>
+            <a class="nav">Breakfast</a>
+            <a class="nav">Lunch</a>
+            <a class="nav">Dinner</a>
+            <a class="nav">Dessert</a>
+        </div>
+    </div>
     <div class="main">
-  <div class="all"> 
-    <h1>
-Be Healthy
-    </h1>
+        <div class="all">
+            <h1>Be Healthy</h1>
+            <p>Lorem ipsum is a pseudo-Latin text used in web design, typography, layout, and printing in place of
+                English to emphasise design elements over content. It's also called placeholder (or filler) text. It's a
+                convenient tool for mock-ups. It helps to outline the visual elements of a document or presentation, eg
+                typography, font, or layout.</p>
+            <h3>BROWSE MENU --&gt;</h3>
+        </div>
 
-    <p>
-        Lorem ipsum is a pseudo-Latin text used in web design, typography, layout, and printing in place of English to emphasise design elements over content. 
-        It's also called placeholder (or filler) text. It's a convenient tool for mock-ups. It helps to outline the visual elements of a document or presentation, eg typography, font, or layout.
+        <div class="img">
+            <div class="img-group">
+                <img class="pics" src="https://mtec.instructure.com/users/1655453/files/97536492/preview?verifier=6tEbdvAvl1QDIBpmCM7JsUVxgKimV50UJT2U9ivP" alt="1">
+                <h4>Fresh</h4>
+                <h5>Breakfast</h5>
+            </div>
 
-           </p>
+            <div class="img-group">
+                <img class="pics" src="https://mtec.instructure.com/users/1655453/files/97536496/preview?verifier=VK9OiU1UaPH9JOuib0r3uToB6TFhYiHLHgPO8msU" alt="2">
+                <h4>Fresh</h4>
+                <h5>Breakfast</h5>
+            </div>
 
-<h3>BROWSE MENU  --&gt;</h3></div> 
-
-<div class="img">
-
-
-<img class="pics" src="https://mtec.instructure.com/users/1655453/files/97536492/preview?verifier=6tEbdvAvl1QDIBpmCM7JsUVxgKimV50UJT2U9ivP" alt ="1">
-    <h4>Fresh</h4>
-    <h5>Breakfast</h5>
-    <img class="pics" src="https://mtec.instructure.com/users/1655453/files/97536496/preview?verifier=VK9OiU1UaPH9JOuib0r3uToB6TFhYiHLHgPO8msU" alt="2">
-   
-    <h4>Fresh</h4>
-    <h5>Breakfast</h5> 
-     
-    <img class="pics" src="https://mtec.instructure.com/users/1655453/files/97536514/preview?verifier=QeYxnovrAJerviKMdtUTXdhxkXmxB3YEkbLtaS38">
-    <h4>Fresh</h4>
-    <h5>Breakfast</h5>  
-</div> </div> 
+            <div class="img-group">
+                <img class="pics" src="https://mtec.instructure.com/users/1655453/files/97536514/preview?verifier=QeYxnovrAJerviKMdtUTXdhxkXmxB3YEkbLtaS38" alt="3">
+                <h4>Fresh</h4>
+                <h5>Breakfast</h5>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
