--- a/index.html
+++ b/index.html
@@ -30,21 +30,25 @@
             <h3>BROWSE MENU --&gt;</h3>
         </div>
 
-        <div class="img">
-            <div class="img-group">
-                <img class="pics" src="https://mtec.instructure.com/users/1655453/files/97536492/preview?verifier=6tEbdvAvl1QDIBpmCM7JsUVxgKimV50UJT2U9ivP" alt="1">
+        <div class="img-group">
+            <img class="pics" src="https://mtec.instructure.com/users/1655453/files/97536492/preview?verifier=6tEbdvAvl1QDIBpmCM7JsUVxgKimV50UJT2U9ivP" alt="1">
+            <div class="caption">
                 <h4>Fresh</h4>
                 <h5>Breakfast</h5>
             </div>
-
-            <div class="img-group">
-                <img class="pics" src="https://mtec.instructure.com/users/1655453/files/97536496/preview?verifier=VK9OiU1UaPH9JOuib0r3uToB6TFhYiHLHgPO8msU" alt="2">
+        </div>
+        
+        <div class="img-group">
+            <img class="pics" src="https://mtec.instructure.com/users/1655453/files/97536496/preview?verifier=VK9OiU1UaPH9JOuib0r3uToB6TFhYiHLHgPO8msU" alt="2">
+            <div class="caption">
                 <h4>Fresh</h4>
                 <h5>Breakfast</h5>
             </div>
-
-            <div class="img-group">
-                <img class="pics" src="https://mtec.instructure.com/users/1655453/files/97536514/preview?verifier=QeYxnovrAJerviKMdtUTXdhxkXmxB3YEkbLtaS38" alt="3">
+        </div>
+        
+        <div class="img-group">
+            <img class="pics" src="https://mtec.instructure.com/users/1655453/files/97536514/preview?verifier=QeYxnovrAJerviKMdtUTXdhxkXmxB3YEkbLtaS38" alt="3">
+            <div class="caption">
                 <h4>Fresh</h4>
                 <h5>Breakfast</h5>
             </div>
