--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     </div>
     <div class="main">
         <div class="all">
-            <h1>Be Healthy</h1>
+            <h1>Be</h1>
+            <h2>Healthy</h2>
             <p>Lorem ipsum is a pseudo-Latin text used in web design, typography, layout, and printing in place of
                 English to emphasise design elements over content. It's also called placeholder (or filler) text. It's a
                 convenient tool for mock-ups. It helps to outline the visual elements of a document or presentation, eg
