--- a/css.html
+++ b/css.html
@@ -16,6 +16,7 @@
         @keyframes box {
             0% {left: 0px; top: 0px;}
             50% {right: 30px; bottom: 20px; background-color: blueviolet;}
+            55% {right: 40px; bottom: 30px; background-color: rgb(66, 3, 126);}
             100% {background-color: blue; left: 10px; top: 20px;}
         }
     </style>
