--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 English to emphasise design elements over content. It's also called placeholder (or filler) text. It's a
                 convenient tool for mock-ups. It helps to outline the visual elements of a document or presentation, eg
                 typography, font, or layout.</p>
-            <h3>BROWSE MENU --&gt;</h3>
+            <h3>BROWSE MENU --></h3>
         </div>
 
         <div class="img-group">
