--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="styles.css"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap"/>
+   
+    
 </head>
 
 <body>
@@ -22,8 +25,10 @@
     </div>
     <div class="main">
         <div class="all">
+<div class="font">
             <h1>Be</h1>
             <h2>Healthy</h2>
+</div>
             <p>Lorem ipsum is a pseudo-Latin text used in web design, typography, layout, and printing in place of
                 English to emphasise design elements over content. It's also called placeholder (or filler) text. It's a
                 convenient tool for mock-ups. It helps to outline the visual elements of a document or presentation, eg
